cluster_app_and_resources_deployments/manifests_yaml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artisan-app-ingress
spec:
  ingressClassName: nginx # Specifies the Ingress Controller to use
  tls:
    hosts:
      - builtbyedunoh.com
      - www.builtbyedunoh.com
    secretName: cloudflare-origin-cert
  rules:

  # If you want to use Nginx ingress controller but don’t yet have a custom domain name (DNS), you should remove the host: parameter from your Ingress YAML so that it can use the ELB domain name.
  # If you want to match all hosts, the right way is to omit the host: field entirely.

# Main artisan app 
  - host: www.builtbyedunoh.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: artisan-app-svc
              port:
                number: 80
                
  # Grafana
  - host: www.builtbyedunoh.com
    http:
      paths:
        - path: /grafana
          pathType: Prefix
          backend:
            service:
              name: monitoring-grafana
              port:
                number: 80
